Changed back link in save & update order

--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -57,6 +57,6 @@
   <p th:if="${#fields.hasErrors('payment.amountPaid')}" th:errorclass="error" th:errors="*{payment.amountPaid}"></p>
   <input type="submit" value="save">
 </form>
-<div th:replace="~{general.html :: back}"></div>
+<a style="cursor: pointer; color: blue" href="/orders">Back</a>
 </body>
 </html>
