Added confirm delete functionality before deleting

--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -19,11 +19,21 @@
         <td th:text="${dimension.name}"></td>
         <td>
             <a th:href="@{/edit-dimensions?id={id}(id=${dimension.dimensionsId})}">Edit</a>
-            <a th:href="@{/delete-dimensions?id={id}(id=${dimension.dimensionsId})}">Delete</a>
+            <a th:attr="onclick=|confirmDelete('${dimension.dimensionsId}')|"
+               href="#">Delete</a>
         </td>
     </tr>
     </tbody>
 </table>
 <a style="cursor: pointer; color: blue" href="/orders">Back</a>
+<script>
+    function confirmDelete(id) {
+        let text = "Are you sure you want to delete?";
+        let link = "/delete-role?id=" + id;
+        if (confirm(text) == true) {
+          window.location.replace(link);
+        }
+  }
+</script>
 </body>
 </html>
