Added static back functionality

--- a/src/main/resources/templates/employee/save-emp-account.html
+++ b/src/main/resources/templates/employee/save-emp-account.html
@@ -16,6 +16,6 @@
 
     <input type="submit" value="save">
 </form>
-<div th:replace="~{general.html :: back}"></div>
+<a style="cursor: pointer; color: blue" href="/employees">Back</a>
 </body>
 </html>
