--- a/src/main/resources/templates/employee/save-emp-info.html
+++ b/src/main/resources/templates/employee/save-emp-info.html
@@ -37,5 +37,6 @@
   <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
   <input type="submit" value="save">
 </form>
+<a style="cursor: pointer; color: blue" href="/employees">Back</a>
 </body>
 </html>
