--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -55,8 +55,7 @@
 
   <input type="submit" value="save">
 </form>
-
-<div th:replace="~{general.html :: back}"></div>
+<a style="cursor: pointer; color: blue" href="/employees">Back</a>
 <script>
     if (document.getElementById('hasAccount1').checked) {
       document.getElementById('account-details').style.display = 'block';
