FIXED BUG: role is deleting for dimensions, order, service-type.

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -165,7 +165,7 @@
 
     function confirmDelete(id) {
         let text = "Are you sure you want to delete?";
-        let link = "/delete-role?id=" + id;
+        let link = "/delete-order?id=" + id;
         if (confirm(text) == true) {
           window.location.replace(link);
         }
