--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -29,7 +29,7 @@
 <script>
     function confirmDelete(id) {
         let text = "Are you sure you want to delete?";
-        let link = "/delete-role?id=" + id;
+        let link = "/delete-dimensions?id=" + id;
         if (confirm(text) == true) {
           window.location.replace(link);
         }
