Added service charges instead of totalAmount

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -70,6 +70,7 @@
                 Dimensions: <p th:text="${order.service.dimensions.name}"></p>
                 Quantity: <p th:text="${order.service.quantity}"></p>
                 Printing charges: <p th:text="${order.service.printingCharges}"></p>
+                Service charges: <p th:text="${order.service.serviceCharges}"></p>
             </div>
         </td>
         <td>
