--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org"
->
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Employees</title>
+    <link th:replace="~{general.html :: b-css}">
+    <link th:replace="~{general.html :: fa-css}">
+    <script th:replace="~{general.html :: b-js}"></script>
     <style>
         .toggle {display: none;}
         .toggleHead {
@@ -13,40 +16,49 @@
     </style>
 </head>
 <body>
+<div class="container-sm">
 <div th:insert="~{general.html :: navbar}"></div>
-<a href="/add-employee">Add employee</a>
-<a href="/roles">Roles</a>
-<table>
-    <thead>
-        <tr>
-            <th>FullName</th>
-            <th>Role</th>
-            <th>PhoneNo</th>
-            <th>EmailAddress</th>
-            <th>Gender</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr th:each="emp : ${employees}">
-            <td th:text="${emp.fullName}"></td>
-            <td th:text="${emp.role.name}"></td>
-            <td th:text="${emp.phoneNo}"></td>
-            <td th:text="${emp.emailAddress}"></td>
-            <td th:text="${emp.gender}"></td>
-            <td>
-                <a class="toggleHead"
-                   th:attr="onclick=|toggleData('update-link${emp.employeeId}')|">Update</a>
-                <div th:id="update-link+${emp.employeeId}" class="toggle">
-                    <a th:href="@{|/update-employee?id=${emp.employeeId}|}">Update info</a>
-                    <a th:href="@{|/update-emp-account?id=${emp.employeeId}|}">Update account</a>
-                </div>
-                <a th:attr="onclick=|confirmDelete('${emp.employeeId}')|"
-                   href="#">Delete</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<a type="button" class="btn btn-outline-primary" href="/add-employee">Add employee</a>
+<a class="btn btn-outline-primary" href="/roles">Roles</a>
+    <br>
+    <table class="table table-hover border">
+        <thead class="table-light">
+            <tr>
+                <th>FullName</th>
+                <th>Role</th>
+                <th>PhoneNo</th>
+                <th>EmailAddress</th>
+                <th>Gender</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="emp : ${employees}">
+                <td th:text="${emp.fullName}"></td>
+                <td th:text="${emp.role.name}"></td>
+                <td th:text="${emp.phoneNo}"></td>
+                <td th:text="${emp.emailAddress}"></td>
+                <td th:text="${emp.gender}"></td>
+                <td>
+                    <div class="dropdown" style="display:inline-block">
+                        <button class="btn btn-success btn-sm dropdown-toggle"
+                                type="button"
+                                data-bs-toggle="dropdown"
+                                aria-expanded="false"><i class="fa-solid fa-pen-to-square"></i></button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" th:href="@{|/update-employee?id=${emp.employeeId}|}">Update info</a></li>
+                            <li><a class="dropdown-item" th:href="@{|/update-emp-account?id=${emp.employeeId}|}">Update account</a></li>
+                        </ul>
+                    </div>
+
+                    <a class="btn btn-danger btn-sm"
+                       th:attr="onclick=|confirmDelete('${emp.employeeId}')|"
+                       href="#"><i class="fa-sharp fa-solid fa-trash"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 <script>
     function toggleData(id) {
         let displayData = document.getElementById(id).style.display;
